--- a/docs/style.css
+++ b/docs/style.css
@@ -9,6 +9,13 @@ html {
     font: 20px/1 sans-serif;
 }
 
+.container {
+    margin: 0 auto;
+    max-width: 30rem;
+}
+
 .students-button {
-    
+    background-color: transparent;
+    border: 3px solid black;
+    padding: 0.5rem 1rem;
 }
